--- a/mchacks2016/main/templates/main/dashboard.html
+++ b/mchacks2016/main/templates/main/dashboard.html
@@ -6,10 +6,76 @@
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="{% static "fullcalendar/dist/fullcalendar.css" %}"/>
+	<link rel="stylesheet" href="{% static "stylesheets/bootstrap.min.css" %}"/>
+	<link rel="stylesheet" href="{% static "stylesheets/main.css" %}"/>
 
 </head>
 <body>
-	<p>At the dashboard view</p>
+	<nav class="navbar navbar-default">
+	  <div class="container">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">Brand</a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="#">Link</a></li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container -->
+	</nav>
+	<div class="header">
+		<img src="http://placehold.it/150x150" class="img-circle">
+		<h1>first last</h1>
+		<h2>username</h2>
+	</div>
+	<div class="container content">
+		<div class="row">
+			<div class="col-md-3">
+				<div class="panel">
+					<div class="panel-body">
+						<h1>Groups</h1>
+						<ul>
+							<li><a href="">McHacks</a></li>
+							<li><a href="">Boop boop</a></li>
+						</ul>
+						<form class="navbar-form navbar-left" role="search">
+			        <div class="form-group">
+			          <input type="text" class="form-control" placeholder="Create new group">
+			        </div>
+			        <button type="submit" class="btn btn-default">Submit</button>
+			      </form>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="panel preferences">
+					<div class="panel-body">
+						<h1>Preferences</h1>
+						<span>Outdoors</span>
+						<span>Food</span>
+						<span>Sports</span>
+						<span>Museums</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="panel">
+					<div class="panel-body">
+						<h1>Schedule</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Scripts -->
 	<!-- jquery, moment, and angular have to get included before fullcalendar -->
