--- a/mchacks2016/main/templates/main/index.html
+++ b/mchacks2016/main/templates/main/index.html
@@ -1,9 +1,68 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Login</title>
+    
+    <!-- Stylesheets -->
+	<link rel="stylesheet" href="{% static "fullcalendar/dist/fullcalendar.css" %}"/>
+	<link rel="stylesheet" href="{% static "stylesheets/bootstrap.min.css" %}"/>
+	<link rel="stylesheet" href="{% static "stylesheets/main.css" %}"/>
+
+	<!-- TODO: shift to main.css -->
+	<style type="text/css">
+		.calendar {
+			width: 50%;
+		}
+	</style>
+    
 </head>
 <body>
-	<p>At the login view</p>
+    <div id="login-overlay" class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h4 class="modal-title myModalLabel">Login to TeamUp</h4>
+          </div>
+          <div class="modal-body">
+              <div class="row">
+                  <div class="col-xs-6">
+                      <div class="well">
+                          <form id="loginForm" method="POST" action="/dashboard/" novalidate="novalidate">
+                              <div class="form-group">
+                                  <label for="username" class="control-label">Username</label>
+                                  <input type="text" class="form-control" id="username" name="username" value="" required="" title="Please enter you username">
+                              </div>
+                              <div class="form-group">
+                                  <label for="password" class="control-label">Password</label>
+                                  <input type="password" class="form-control" id="password" name="password" value="" required="" title="Please enter your password">
+                                  <span class="help-block"></span>
+                              </div>
+                              <div id="loginErrorMsg" class="alert alert-error hide">Wrong username or password</div>
+                              <div class="checkbox">
+                                  <label>
+                                      <input type="checkbox" name="remember" id="remember"> Remember login
+                                  </label>
+                              </div>
+                              <button type="submit" class="btn btn-success btn-block">Login</button>
+                              <a href="/reset-password/" class="btn btn-default btn-block">Lost Password</a>
+                          </form>
+                      </div>
+                  </div>
+                  <div class="col-xs-6">
+                      <p class="lead">Register now</p>
+                      <ul class="list-unstyled awesome-sauce" style="line-height: 2">
+                          <li>Schedule a team meetup</li>
+                          <li>Respect schedules</li>
+                          <li>Choose activity according to interests</li>
+                          <li>Trust our choice</li>
+                          <li>Let the teambonding begin!</li>
+                      </ul>
+                      <p><a href="/new-user/" class="btn btn-info btn-block">Sounds good, register now!</a></p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+	
 </body>
 </html>
