--- a/mchacks2016/main/templates/main/dashboard.html
+++ b/mchacks2016/main/templates/main/dashboard.html
@@ -44,7 +44,7 @@
 						<h1>Groups</h1>
 						<ul>
 							{% for group in userGroups %}
-								<li><a href="">{{group}}</a></li>
+								<li><a href="/group/{{group}}/">{{group}}</a></li>
 							{% endfor %}
 						</ul>
 						<form class="navbar-form navbar-left" role="search">
