Forgot to add a closing tag :(

--- a/mchacks2016/main/templates/main/group.html
+++ b/mchacks2016/main/templates/main/group.html
@@ -73,7 +73,7 @@
 						<h3>Activities</h3>
 						<ul>
 							{% for act in group.suggested_activities.all %}
-							<li>{{ act }} <a href="" class=""><span class="vote glyphicon glyphicon-arrow-up" aria-hidden="true"></li>
+							<li>{{ act }} <a href="" class=""><span class="vote glyphicon glyphicon-arrow-up" aria-hidden="true"></a></li>
 							{% endfor %}
 						</ul>
 						<h3>Dates</h3>
