--- a/mchacks2016/main/templates/main/register.html
+++ b/mchacks2016/main/templates/main/register.html
@@ -20,7 +20,7 @@
     {% if form.errors %}
         <p class="error">Sorry, that's not a valid username or password.</p>
     {% endif %}
-    
+
     <div id="login-overlay" class="modal-dialog">
       <div class="modal-content">
           <div class="modal-header">
@@ -49,7 +49,7 @@
                               </div>
                               <div class="form-group">
                                   <label for="password" class="control-label">Password :</label>
-                                  <input type="text" class="form-control" title="Please enter you password" name="password" value="" id="password">
+                                  <input type="password" class="form-control" title="Please enter you password" name="password" value="" id="password">
                               </div>
                               <button href="" type="submit" class="btn btn-success btn-block">Register</button>
                           </form>
